﻿----------------------
phpMyAdmin - ChangeLog
----------------------

$Id$
$Source$

2006-08-04 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_operations.php, libraries/export/sql.php:
      bug #1526000, copying table to another db (MYSQL 5.0.24)

2006-08-03 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    *  libraries/dbi/mysqli.dbi.lib.php PMA_DBI_try_query(): do not force
       MYSQLI_USE_RESULT if not requested, makes PMA_DBI_num_rows() not to work

2006-08-02 Marc Delisle  <lem9@users.sourceforge.net>
    ### 2.8.2.1 released from MAINT_2_8_2

2006-08-02 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * css\phpmyadmin.css.php, themes\darkblue_orange\css\theme_right.css.php
      themes\darkblue_orange\layout.inc.php, themes\original\layout.inc.php
      themes\original\css\theme_left.css.php,
      themes\original\css\theme_right.css.php:
      added variables to define (text) color for marked and hovered objects
      thanks to Juergen Wind - windkiel for hinting this bug (patch #1503529)
    * Documentation.html: updated style config option descriptions
    * libraries/common.lib.php:
      - added PMA_escapeJsString() to escape strings for JavaScript inside CDATA blocks
      - added PMA_unQuote() to remove quotes from strings
    * libraries/footer.inc.php: correctly escape strings inside JavaScript
      (part of bug #1532721)
    * libraries/sqlparser.lib.php: correctly unquote identifiers
      (part of bug #1532721)
    * libraries/display_tbl.lib.php:
      bug #1524387 incorrectly detects table name for result field

2006-08-01 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: patch #1532493 + light editing from me,
      thanks to Isaac Bennetch

2006-08-01 Sebastian Mendel <cybot_tm@users.sourceforge.net>
    * left.php, libraries/header.inc.php:
      do not apply 'vertical scrollbar bug'-fix to IE 7
    * changelog.php: updatet CVS URL
    * libraries/dbi/mysqli.dbi.lib.php: