@@ -408,12 +408,14 @@ if (!($cfg['PropertiesNumColumns'] > 1)) {
     echo '    <th align="center">' . "\n"
        . '        <dfn title="'
        . sprintf($strDefaultEngine, $default_engine) . '">' .$default_engine . '</th>' . "\n";
+    // we got a case where $db_collation was empty
+    echo '    <th align="center">' . "\n";
     if (! empty($db_collation)) {
-        echo '    <th align="center">' . "\n"
-           . '        <dfn title="'
+        echo '        <dfn title="'
            . PMA_getCollationDescr($db_collation) . ' (' . $strDefault . ')">' . $db_collation
-           . '</dfn></th>';
+           . '</dfn>';
     }
+    echo '</th>';
 }
 
 if ($is_show_stats) {
