@@ -8,6 +8,8 @@ $Source$
 2006-08-04 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_properties_operations.php, libraries/export/sql.php:
       bug #1526000, copying table to another db (MYSQL 5.0.24)
+    * db_details_structure.php: bug #1530574, misaligned HTML 
+      when db_collation is empty
 
 2006-08-03 Sebastian Mendel <cybot_tm@users.sourceforge.net>
     *  libraries/dbi/mysqli.dbi.lib.php PMA_DBI_try_query(): do not force
